--- a/assets/less/bootstrap/bootstrap.less
+++ b/assets/less/bootstrap/bootstrap.less
@@ -28,7 +28,7 @@
 
 // Components: common
 @import "component-animations.less";
-@import "glyphicons.less";
+@import "../../fonts/elusive-webfont.less";
 @import "dropdowns.less";
 @import "list-group.less";
 @import "panels.less";
