small tweak for php-less compiler to avoid memory limit issue

--- a/assets/less/bootstrap/utilities.less
+++ b/assets/less/bootstrap/utilities.less
@@ -6,8 +6,11 @@
 // Floats
 // -------------------------
 
-.clearfix {
+.clearfixed {
   .clearfix();
+}
+.clearfix {
+  .clearfixed;
 }
 .pull-right {
   float: right;
