--- a/assets/less/app-gradients-radius.less
+++ b/assets/less/app-gradients-radius.less
@@ -1,56 +1,66 @@
+/*!
+ * Bootstrap v3.0.0
+ *
+ * Copyright 2013 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world by @mdo and @fat.
+ */
+
 // Core variables and mixins
-@import "bootstrap/variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "bootstrap/mixins.less";
+@import "variables.less";
+@import "mixins.less";
 
-// CSS Reset
-@import "bootstrap/reset.less";
+// Reset
+@import "normalize.less";
+@import "print.less";
 
-// Grid system and page structure
-@import "bootstrap/scaffolding.less";
-@import "bootstrap/grid.less";
-@import "bootstrap/layouts.less";
+// Core CSS
+@import "scaffolding.less";
+@import "type.less";
+@import "code.less";
+@import "grid.less";
 
-// Base CSS
-@import "bootstrap/type.less";
-@import "bootstrap/code.less";
-@import "bootstrap/forms.less";
-@import "bootstrap/tables.less";
+@import "tables.less";
+@import "forms.less";
+@import "buttons.less";
 
 // Components: common
-// @import "sprites.less";
-@import "../fonts/elusive-webfont.less";
-@import "bootstrap/dropdowns.less";
-@import "bootstrap/wells.less";
-@import "bootstrap/component-animations.less";
-@import "bootstrap/close.less";
-
-// Components: Buttons & Alerts
-@import "bootstrap/buttons.less";
-@import "bootstrap/button-groups.less";
-@import "bootstrap/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+@import "component-animations.less";
+@import "../../fonts/elusive-webfont.less";
+@import "dropdowns.less";
+@import "list-group.less";
+@import "panels.less";
+@import "wells.less";
+@import "close.less";
 
 // Components: Nav
-@import "bootstrap/navs.less";
-@import "bootstrap/navbar.less";
-@import "bootstrap/breadcrumbs.less";
-@import "bootstrap/pagination.less";
-@import "bootstrap/pager.less";
+@import "navs.less";
+@import "navbar.less";
+@import "button-groups.less";
+@import "breadcrumbs.less";
+@import "pagination.less";
+@import "pager.less";
 
 // Components: Popovers
-@import "bootstrap/modals.less";
-@import "bootstrap/tooltip.less";
-@import "bootstrap/popovers.less";
+@import "modals.less";
+@import "tooltip.less";
+@import "popovers.less";
 
 // Components: Misc
-@import "bootstrap/thumbnails.less";
-@import "bootstrap/media.less";
-@import "bootstrap/labels-badges.less";
-@import "bootstrap/progress-bars.less";
-@import "bootstrap/accordion.less";
-@import "bootstrap/carousel.less";
-@import "bootstrap/hero-unit.less";
+@import "alerts.less";
+@import "thumbnails.less";
+@import "media.less";
+@import "labels.less";
+@import "badges.less";
+@import "progress-bars.less";
+@import "accordion.less";
+@import "carousel.less";
+@import "jumbotron.less";
 
 // Utility classes
-@import "bootstrap/utilities.less"; // Has to be last to override when necessary
+@import "utilities.less"; // Has to be last to override when necessary
+@import "responsive-utilities.less";
 
-@import "app.less";
+@import "app.less"; // Custom Shoestrap less-css
