--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -174,7 +174,7 @@ li.social-networks {
 }
 
 .subnav-fixed {
-  navbar;
+  .navbar;
   position: fixed;
   top: 0;
   left: 0;
@@ -254,4 +254,9 @@ a.toggle-nav {
 #megaDrop {
   display: none;
   padding: 20px 10px;
+}
+
+.navbar {
+  padding-left: 0;
+  padding-right: 0;
 }
