--- a/assets/less/bootstrap/navbar.less
+++ b/assets/less/bootstrap/navbar.less
@@ -19,7 +19,7 @@
 // -------------------------
 
 .navbar-nav {
-  // Space out from .navbar .brand and .navbar-toggle when stacked in mobile views
+  // Space out from .navbar .brand and .btn-navbar when stacked in mobile views
   margin-top: 5px;
 
   > li > a {
