--- a/assets/css/app-no-gradients-no-radius.css
+++ b/assets/css/app-no-gradients-no-radius.css
@@ -4913,3 +4913,77 @@ a.toggle-nav.black {
   padding-left: 0;
   padding-right: 0;
 }
+.button {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid #a7a9aa;
+  border-radius: 4px;
+  white-space: nowrap;
+  color: #fff;
+  background-color: #a7a9aa;
+  border-color: #a7a9aa;
+}
+.button:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+.button:hover,
+.button:focus {
+  color: #fff;
+  text-decoration: none;
+}
+.button:active,
+.button.active {
+  outline: 0;
+  background-image: none;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
+  box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
+}
+.button.disabled,
+.button[disabled],
+fieldset[disabled] .button {
+  cursor: default;
+  pointer-events: none;
+  opacity: .65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.button:hover,
+.button:focus,
+.button:active,
+.button.active {
+  background-color: #9a9c9d;
+  border-color: #8d9091;
+}
+.button.disabled:hover,
+.button.disabled:focus,
+.button.disabled:active,
+.button.disabled.active,
+.button[disabled]:hover,
+.button[disabled]:focus,
+.button[disabled]:active,
+.button[disabled].active,
+fieldset[disabled] .button:hover,
+fieldset[disabled] .button:focus,
+fieldset[disabled] .button:active,
+fieldset[disabled] .button.active {
+  background-color: #a7a9aa;
+  border-color: #a7a9aa;
+}
+.button [class^="glyphicon-"],
+.button [class*=" glyphicon-"] {
+  line-height: .9em;
+}
+.button .badge {
+  position: relative;
+  top: -1px;
+}
