--- a/assets/css/app-no-gradients.css
+++ b/assets/css/app-no-gradients.css
@@ -5123,3 +5123,20 @@ fieldset[disabled] .button.active {
 .navbar-brand {
   padding: 9px;
 }
+.widget-inner ul {
+  margin: 0 0 20px;
+  background-color: #fff;
+}
+.widget-inner ul li {
+  position: relative;
+  display: block;
+  padding: 10px 30px 10px 15px;
+  margin-bottom: -1px;
+  border: 1px solid #ddd;
+}
+.widget-inner ul li ul {
+  display: none;
+}
+.widget-inner ul li:hover ul {
+  display: block;
+}
