--- a/assets/css/app-no-gradients-no-radius.css
+++ b/assets/css/app-no-gradients-no-radius.css
@@ -1054,9 +1054,10 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"] {
-  display: inline-block;
+  display: block;
   min-height: 34px;
   padding: 6px 9px;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 20px;
   color: #555555;
@@ -1159,6 +1160,7 @@ textarea::-webkit-input-placeholder {
   min-height: 20px;
   margin-bottom: 10px;
   padding-left: 20px;
+  vertical-align: middle;
 }
 .radio label,
 .checkbox label {
@@ -1363,19 +1365,20 @@ select:focus:invalid:focus {
 .input-group {
   display: table;
 }
-.input-group[class*="span"] {
+.input-group.col {
   float: none;
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 .input-group input,
 .input-group select {
   width: 100%;
+  margin-bottom: 0;
 }
 .input-group-addon,
 .input-group-btn,
 .input-group input {
   display: table-cell;
-  margin: 0;
   border-radius: 0;
 }
 .input-group-addon.input-small,
@@ -1436,6 +1439,14 @@ select:focus:invalid:focus {
 .input-group-btn > .btn:active {
   z-index: 2;
 }
+.form-inline input,
+.form-inline select,
+.form-inline textarea,
+.form-inline .radio,
+.form-inline .checkbox {
+  display: inline-block;
+  margin-bottom: 0;
+}
 @media screen and (min-width: 768px) {
   .form-horizontal .control-group {
     position: relative;
@@ -1485,7 +1496,7 @@ select:focus:invalid:focus {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  border: 1px solid #a7a9aa;
+  border: 1px solid transparent;
   border-radius: 4px;
   white-space: nowrap;
 }
@@ -1515,192 +1526,6 @@ fieldset[disabled] .btn {
   filter: alpha(opacity=65);
   -webkit-box-shadow: none;
   box-shadow: none;
-}
-.btn-large {
-  padding: 11px 14px;
-  font-size: 17.5px;
-  border-radius: 6px;
-}
-.btn-small {
-  padding: 2px 10px;
-  font-size: 11.9px;
-  border-radius: 3px;
-}
-.btn-mini {
-  padding: 0 6px;
-  font-size: 10.5px;
-  border-radius: 3px;
-}
-.btn-block {
-  display: block;
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-}
-.btn-block + .btn-block {
-  margin-top: 5px;
-}
-input[type="submit"].btn-block,
-input[type="reset"].btn-block,
-input[type="button"].btn-block {
-  width: 100%;
-}
-.btn {
-  color: #fff;
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
-}
-.btn:hover,
-.btn:focus,
-.btn:active,
-.btn.active {
-  background-color: #9a9c9d;
-  border-color: #8d9091;
-}
-.btn.disabled:hover,
-.btn.disabled:focus,
-.btn.disabled:active,
-.btn.disabled.active,
-.btn[disabled]:hover,
-.btn[disabled]:focus,
-.btn[disabled]:active,
-.btn[disabled].active,
-fieldset[disabled] .btn:hover,
-fieldset[disabled] .btn:focus,
-fieldset[disabled] .btn:active,
-fieldset[disabled] .btn.active {
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
-}
-.btn-primary {
-  background-color: #428bca;
-  border-color: #428bca;
-}
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active {
-  background-color: #357ebd;
-  border-color: #3071a9;
-}
-.btn-primary.disabled:hover,
-.btn-primary.disabled:focus,
-.btn-primary.disabled:active,
-.btn-primary.disabled.active,
-.btn-primary[disabled]:hover,
-.btn-primary[disabled]:focus,
-.btn-primary[disabled]:active,
-.btn-primary[disabled].active,
-fieldset[disabled] .btn-primary:hover,
-fieldset[disabled] .btn-primary:focus,
-fieldset[disabled] .btn-primary:active,
-fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #428bca;
-}
-.btn-warning {
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
-}
-.btn-warning:hover,
-.btn-warning:focus,
-.btn-warning:active,
-.btn-warning.active {
-  background-color: #eea236;
-  border-color: #ec971f;
-}
-.btn-warning.disabled:hover,
-.btn-warning.disabled:focus,
-.btn-warning.disabled:active,
-.btn-warning.disabled.active,
-.btn-warning[disabled]:hover,
-.btn-warning[disabled]:focus,
-.btn-warning[disabled]:active,
-.btn-warning[disabled].active,
-fieldset[disabled] .btn-warning:hover,
-fieldset[disabled] .btn-warning:focus,
-fieldset[disabled] .btn-warning:active,
-fieldset[disabled] .btn-warning.active {
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
-}
-.btn-danger {
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
-.btn-danger:hover,
-.btn-danger:focus,
-.btn-danger:active,
-.btn-danger.active {
-  background-color: #d43f3a;
-  border-color: #c9302c;
-}
-.btn-danger.disabled:hover,
-.btn-danger.disabled:focus,
-.btn-danger.disabled:active,
-.btn-danger.disabled.active,
-.btn-danger[disabled]:hover,
-.btn-danger[disabled]:focus,
-.btn-danger[disabled]:active,
-.btn-danger[disabled].active,
-fieldset[disabled] .btn-danger:hover,
-fieldset[disabled] .btn-danger:focus,
-fieldset[disabled] .btn-danger:active,
-fieldset[disabled] .btn-danger.active {
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
-.btn-success {
-  background-color: #5cb85c;
-  border-color: #5cb85c;
-}
-.btn-success:hover,
-.btn-success:focus,
-.btn-success:active,
-.btn-success.active {
-  background-color: #4cae4c;
-  border-color: #449d44;
-}
-.btn-success.disabled:hover,
-.btn-success.disabled:focus,
-.btn-success.disabled:active,
-.btn-success.disabled.active,
-.btn-success[disabled]:hover,
-.btn-success[disabled]:focus,
-.btn-success[disabled]:active,
-.btn-success[disabled].active,
-fieldset[disabled] .btn-success:hover,
-fieldset[disabled] .btn-success:focus,
-fieldset[disabled] .btn-success:active,
-fieldset[disabled] .btn-success.active {
-  background-color: #5cb85c;
-  border-color: #5cb85c;
-}
-.btn-info {
-  background-color: #5bc0de;
-  border-color: #5bc0de;
-}
-.btn-info:hover,
-.btn-info:focus,
-.btn-info:active,
-.btn-info.active {
-  background-color: #46b8da;
-  border-color: #31b0d5;
-}
-.btn-info.disabled:hover,
-.btn-info.disabled:focus,
-.btn-info.disabled:active,
-.btn-info.disabled.active,
-.btn-info[disabled]:hover,
-.btn-info[disabled]:focus,
-.btn-info[disabled]:active,
-.btn-info[disabled].active,
-fieldset[disabled] .btn-info:hover,
-fieldset[disabled] .btn-info:focus,
-fieldset[disabled] .btn-info:active,
-fieldset[disabled] .btn-info.active {
-  background-color: #5bc0de;
-  border-color: #5bc0de;
 }
 .btn-link,
 .btn-link:active,
@@ -1735,6 +1560,35 @@ fieldset[disabled] .btn-link:hover,
 fieldset[disabled] .btn-link:focus {
   color: #333333;
   text-decoration: none;
+}
+.btn-large {
+  padding: 11px 14px;
+  font-size: 17.5px;
+  border-radius: 6px;
+}
+.btn-small {
+  padding: 2px 10px;
+  font-size: 11.9px;
+  border-radius: 3px;
+}
+.btn-mini {
+  padding: 0 6px;
+  font-size: 10.5px;
+  border-radius: 3px;
+}
+.btn-block {
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
+input[type="submit"].btn-block,
+input[type="reset"].btn-block,
+input[type="button"].btn-block {
+  width: 100%;
 }
 .fade {
   opacity: 0;
@@ -3202,7 +3056,7 @@ button.close {
   clear: both;
 }
 .navbar-nav {
-  margin-top: 5px;
+  margin: 10px -15px 0;
 }
 .navbar-nav > li > a {
   padding-top: 15px;
@@ -4923,12 +4777,9 @@ a.toggle-nav.black {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  border: 1px solid #a7a9aa;
+  border: 1px solid transparent;
   border-radius: 4px;
   white-space: nowrap;
-  color: #fff;
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
 }
 .button:focus {
   outline: thin dotted #333;
@@ -4956,28 +4807,6 @@ fieldset[disabled] .button {
   filter: alpha(opacity=65);
   -webkit-box-shadow: none;
   box-shadow: none;
-}
-.button:hover,
-.button:focus,
-.button:active,
-.button.active {
-  background-color: #9a9c9d;
-  border-color: #8d9091;
-}
-.button.disabled:hover,
-.button.disabled:focus,
-.button.disabled:active,
-.button.disabled.active,
-.button[disabled]:hover,
-.button[disabled]:focus,
-.button[disabled]:active,
-.button[disabled].active,
-fieldset[disabled] .button:hover,
-fieldset[disabled] .button:focus,
-fieldset[disabled] .button:active,
-fieldset[disabled] .button.active {
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
 }
 .button [class^="glyphicon-"],
 .button [class*=" glyphicon-"] {
