--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1054,9 +1054,10 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"] {
-  display: inline-block;
+  display: block;
   min-height: 34px;
   padding: 6px 9px;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 20px;
   color: #555555;
@@ -1159,6 +1160,7 @@ textarea::-webkit-input-placeholder {
   min-height: 20px;
   margin-bottom: 10px;
   padding-left: 20px;
+  vertical-align: middle;
 }
 .radio label,
 .checkbox label {
@@ -1363,19 +1365,20 @@ select:focus:invalid:focus {
 .input-group {
   display: table;
 }
-.input-group[class*="span"] {
+.input-group.col {
   float: none;
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 .input-group input,
 .input-group select {
   width: 100%;
+  margin-bottom: 0;
 }
 .input-group-addon,
 .input-group-btn,
 .input-group input {
   display: table-cell;
-  margin: 0;
   border-radius: 0;
 }
 .input-group-addon.input-small,
@@ -1496,6 +1499,14 @@ select:focus:invalid:focus {
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
 }
+.form-inline input,
+.form-inline select,
+.form-inline textarea,
+.form-inline .radio,
+.form-inline .checkbox {
+  display: inline-block;
+  margin-bottom: 0;
+}
 @media screen and (min-width: 768px) {
   .form-horizontal .control-group {
     position: relative;
@@ -1545,7 +1556,7 @@ select:focus:invalid:focus {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  border: 1px solid #a7a9aa;
+  border: 1px solid transparent;
   border-radius: 4px;
   white-space: nowrap;
 }
@@ -1576,63 +1587,35 @@ fieldset[disabled] .btn {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-.btn-large {
-  padding: 11px 14px;
-  font-size: 17.5px;
-  border-radius: 6px;
-}
-.btn-small {
-  padding: 2px 10px;
-  font-size: 11.9px;
-  border-radius: 3px;
-}
-.btn-mini {
-  padding: 0 6px;
-  font-size: 10.5px;
-  border-radius: 3px;
-}
-.btn-block {
-  display: block;
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-}
-.btn-block + .btn-block {
-  margin-top: 5px;
-}
-input[type="submit"].btn-block,
-input[type="reset"].btn-block,
-input[type="button"].btn-block {
-  width: 100%;
-}
-.btn {
+.btn-default {
   color: #fff;
   background-color: #a7a9aa;
   border-color: #a7a9aa;
 }
-.btn:hover,
-.btn:focus,
-.btn:active,
-.btn.active {
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active {
   background-color: #9a9c9d;
   border-color: #8d9091;
 }
-.btn.disabled:hover,
-.btn.disabled:focus,
-.btn.disabled:active,
-.btn.disabled.active,
-.btn[disabled]:hover,
-.btn[disabled]:focus,
-.btn[disabled]:active,
-.btn[disabled].active,
-fieldset[disabled] .btn:hover,
-fieldset[disabled] .btn:focus,
-fieldset[disabled] .btn:active,
-fieldset[disabled] .btn.active {
+.btn-default.disabled:hover,
+.btn-default.disabled:focus,
+.btn-default.disabled:active,
+.btn-default.disabled.active,
+.btn-default[disabled]:hover,
+.btn-default[disabled]:focus,
+.btn-default[disabled]:active,
+.btn-default[disabled].active,
+fieldset[disabled] .btn-default:hover,
+fieldset[disabled] .btn-default:focus,
+fieldset[disabled] .btn-default:active,
+fieldset[disabled] .btn-default.active {
   background-color: #a7a9aa;
   border-color: #a7a9aa;
 }
 .btn-primary {
+  color: #fff;
   background-color: #428bca;
   border-color: #428bca;
 }
@@ -1659,6 +1642,7 @@ fieldset[disabled] .btn-primary.active {
   border-color: #428bca;
 }
 .btn-warning {
+  color: #fff;
   background-color: #f0ad4e;
   border-color: #f0ad4e;
 }
@@ -1685,6 +1669,7 @@ fieldset[disabled] .btn-warning.active {
   border-color: #f0ad4e;
 }
 .btn-danger {
+  color: #fff;
   background-color: #d9534f;
   border-color: #d9534f;
 }
@@ -1711,6 +1696,7 @@ fieldset[disabled] .btn-danger.active {
   border-color: #d9534f;
 }
 .btn-success {
+  color: #fff;
   background-color: #5cb85c;
   border-color: #5cb85c;
 }
@@ -1737,6 +1723,7 @@ fieldset[disabled] .btn-success.active {
   border-color: #5cb85c;
 }
 .btn-info {
+  color: #fff;
   background-color: #5bc0de;
   border-color: #5bc0de;
 }
@@ -1795,6 +1782,35 @@ fieldset[disabled] .btn-link:hover,
 fieldset[disabled] .btn-link:focus {
   color: #333333;
   text-decoration: none;
+}
+.btn-large {
+  padding: 11px 14px;
+  font-size: 17.5px;
+  border-radius: 6px;
+}
+.btn-small {
+  padding: 2px 10px;
+  font-size: 11.9px;
+  border-radius: 3px;
+}
+.btn-mini {
+  padding: 0 6px;
+  font-size: 10.5px;
+  border-radius: 3px;
+}
+.btn-block {
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
+input[type="submit"].btn-block,
+input[type="reset"].btn-block,
+input[type="button"].btn-block {
+  width: 100%;
 }
 .fade {
   opacity: 0;
@@ -3284,7 +3300,7 @@ button.close {
   clear: both;
 }
 .navbar-nav {
-  margin-top: 5px;
+  margin: 10px -15px 0;
 }
 .navbar-nav > li > a {
   padding-top: 15px;
@@ -5080,12 +5096,9 @@ a.toggle-nav.black {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  border: 1px solid #a7a9aa;
+  border: 1px solid transparent;
   border-radius: 4px;
   white-space: nowrap;
-  color: #fff;
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
 }
 .button:focus {
   outline: thin dotted #333;
@@ -5113,28 +5126,6 @@ fieldset[disabled] .button {
   filter: alpha(opacity=65);
   -webkit-box-shadow: none;
   box-shadow: none;
-}
-.button:hover,
-.button:focus,
-.button:active,
-.button.active {
-  background-color: #9a9c9d;
-  border-color: #8d9091;
-}
-.button.disabled:hover,
-.button.disabled:focus,
-.button.disabled:active,
-.button.disabled.active,
-.button[disabled]:hover,
-.button[disabled]:focus,
-.button[disabled]:active,
-.button[disabled].active,
-fieldset[disabled] .button:hover,
-fieldset[disabled] .button:focus,
-fieldset[disabled] .button:active,
-fieldset[disabled] .button.active {
-  background-color: #a7a9aa;
-  border-color: #a7a9aa;
 }
 .button [class^="glyphicon-"],
 .button [class*=" glyphicon-"] {
