--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4722,6 +4722,30 @@ a.list-group-item.active > .badge,
 .alignright {
   float: right;
 }
+figure.alignnone {
+  margin-left: 0;
+  margin-right: 0;
+}
+.jumbotron {
+  padding: 1em 0;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.4), 0 0 30px rgba(0,0,0,0.075);
+  font-size: 2em;
+  line-height: 1.25;
+}
+.jumbotron h1 {
+  line-height: 1;
+  letter-spacing: -2;
+  width: 100%;
+  display: block;
+}
+.jumbotron p {
+  margin-bottom: 10px;
+}
+.jumbotron p a.btn {
+  padding: 14px 24px;
+  font-size: 24px;
+}
 .admin-customize {
   position: fixed;
   bottom: 0;
@@ -4741,6 +4765,30 @@ a.list-group-item.active > .badge,
   font-size: 50px;
 }
 .admin-customize:hover {
+  opacity: 1;
+}
+#shoestrap_icon {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+#shoestrap_icon a {
+  width: 100px;
+  height: 20px;
+  display: block;
+  background: url("../img/bottom-corner.png") no-repeat bottom left;
+  color: #fff;
+  font-size: 40px;
+  opacity: 0.3;
+  text-decoration: none;
+  padding: 80px 0 40px 5px;
+  -webkit-transition: all 350ms linear;
+  -moz-transition: all 350ms linear;
+  -ms-transition: all 350ms linear;
+  -o-transition: all 350ms linear;
+  transition: all 350ms linear;
+}
+#shoestrap_icon a:hover {
   opacity: 1;
 }
 a.toggle-nav {
