--- a/assets/less/app-no-radius.less
+++ b/assets/less/app-no-radius.less
@@ -28,7 +28,7 @@
 
 // Components: common
 @import "bootstrap/component-animations.less";
-@import "../../fonts/elusive-webfont.less";
+@import "../fonts/elusive-webfont.less";
 @import "bootstrap/dropdowns.less";
 @import "bootstrap/list-group.less";
 @import "bootstrap/panels.less";
