--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -228,3 +228,17 @@ a.toggle-nav {
     display: none;
   }
 }
+
+.label {
+  &.label-tag {
+    a{
+      color: #fff;
+      text-decoration: none;
+      &:hover {
+        color: #fff;
+        text-decoration: none;
+      }
+    }
+
+  }
+}
