--- a/assets/css/app-no-radius.css
+++ b/assets/css/app-no-radius.css
@@ -4761,3 +4761,11 @@ fieldset[disabled] #social-sharing .shareme .box {
     display: none;
   }
 }
+.label.label-tag a {
+  color: #fff;
+  text-decoration: none;
+}
+.label.label-tag a:hover {
+  color: #fff;
+  text-decoration: none;
+}
