fixed tags on metatags section when there are too many of them

--- a/assets/css/app-no-gradients-no-radius.css
+++ b/assets/css/app-no-gradients-no-radius.css
@@ -4462,6 +4462,9 @@ figure.alignnone {
 .container.fluid {
   max-width: 98%;
 }
+#wrap {
+  padding-top: 20px;
+}
 body.top-navbar.admin-bar {
   padding-top: 53px;
 }
@@ -4744,4 +4747,21 @@ fieldset[disabled] #social-sharing .shareme .box {
 .label.label-tag a:hover {
   color: #fff;
   text-decoration: none;
+}
+.meta-row {
+  height: 1.7em;
+  overflow: hidden;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+.meta-row:hover {
+  overflow: visible;
+}
+.meta-row .tags-container {
+  background: #fff;
+  position: absolute;
+  line-height: 1.7em;
+  z-index: 99;
 }
