--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -30,6 +30,11 @@ figure.alignnone {
   max-width: 98%;
 }
 
+// Add a 20px padding on the top of #wrap
+#wrap {
+  padding-top: 20px;
+}
+
 // Add padding & margins to the body and navbarsaccording to our primary navbar selections
 body {
   &.top-navbar {
@@ -240,5 +245,23 @@ a.toggle-nav {
       }
     }
 
+  }
+}
+
+.meta-row {
+  height: 1.7em;
+  overflow: hidden;
+  -webkit-transition:all 0.3s linear;
+  -moz-transition:all 0.3s linear;
+  -o-transition:all 0.3s linear;
+  transition:all 0.3s linear;
+ &:hover {
+    overflow: visible;
+  }
+  .tags-container {
+    background: @body-bg;
+    position: absolute;
+    line-height: 1.7em;
+    z-index: 99;
   }
 }
