--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -135,6 +135,7 @@ a.toggle-nav {
 // Adding bootstrap btn styles to wordpress's .button elements
 .button {
   .btn;
+  .btn-default;
 }
 
 // Styling lists in widgets
